--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="../output/css/style.min.css">
+  <link rel="stylesheet" href="css/style.min.css">
   <link rel="stylesheet" href="css/animasi.css">
   <link rel="icon" href="img/internet.png">
-  <title>Tailwind Starter</title>
+  <title>Aima Website</title>
   <style>
     .neo-shadow {
       box-shadow: 0 20px 25px -5px rgba(49, 46, 46, 0.07),
