merubah kesalahan link

--- a/index.html
+++ b/index.html
@@ -599,23 +599,23 @@
             <div class="flex justify-center">
               <a href="https://www.facebook.com/profile.php?id=100030701887505"
                 class="mr-3 block p-2 pl-3 pr-3 md:p-3 md:pl-4 md:pr-4 rounded-full bg-white shadow-lg hover:bg-gray-200">
-                <img src="img/facebook-f.svg" class="w-3" alt="">
+                <img src="image/facebook-f.svg" class="w-3" alt="">
               </a>
               <a href="https://instagram.com/invites/contact?i=195fh8qwn70bo&utm_content=7261rn3"
                 class="mr-3 block p-2 md:p-3 rounded-full bg-white shadow-lg hover:bg-gray-200">
-                <img src="img/instagram.svg" class="w-5" alt="">
+                <img src="image/instagram.svg" class="w-5" alt="">
               </a>
               <a href="https://www.anda-ketipu.com?id=242kj"
                 class="mr-3 block p-2 md:p-3 rounded-full bg-white shadow-lg hover:bg-gray-200">
-                <img src="img/twitter.svg" class="w-5" alt="">
+                <img src="image/twitter.svg" class="w-5" alt="">
               </a>
               <a href="https://api.whatsapp.com/send?phone=+6285601771828"
                 class="mr-3 block p-2 md:p-3 rounded-full bg-white shadow-lg hover:bg-gray-200">
-                <img src="img/whatsapp.svg" class="w-5" alt="">
+                <img src="image/whatsapp.svg" class="w-5" alt="">
               </a>
               <a href="https://t.me/Ekosusilo"
                 class="block p-2 md:p-3 rounded-full bg-white shadow-lg hover:bg-gray-200">
-                <img src="img/telegram.svg" class="w-5" alt="">
+                <img src="image/telegram.svg" class="w-5" alt="">
               </a>
             </div>
           </div>
