rubah link rel:icon

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/style.min.css">
   <link rel="stylesheet" href="css/animasi.css">
-  <link rel="icon" href="img/internet.png">
+  <link rel="icon" href="image/internet.png">
   <title>Aima Website</title>
   <style>
     .neo-shadow {
@@ -108,7 +108,7 @@
     </div>
 
   </div>
-  <div class="website" style="display:none;">
+  <div class="website" style="height:0;">
     <section id="home">
       <nav class="z-10 fixed w-full h-16 py-5 px-2 bg-grad-purple top-0">
         <div class="container h-full mx-auto flex items-center">
