--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     </div>
 
   </div>
-  <div class="website" style="height:0;">
+  <div class="website" style="height:0;overflow:hidden;">
     <section id="home">
       <nav class="z-10 fixed w-full h-16 py-5 px-2 bg-grad-purple top-0">
         <div class="container h-full mx-auto flex items-center">
