menganti url font
mengganti url font blogger sans yang sebelumnya Blogger_Sans.otf menjadi Blogger_Sans.ttf

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     @font-face {
       font-family: blogger;
-      src: url(font/Blogger_sans.otf);
+      src: url(font/Blogger_sans.ttf);
     }
 
     @font-face {
