--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     @font-face {
       font-family: blogger;
-      src: url(font/Blogger_sans.ttf);
+      src: url(font/Blogger_Sans.ttf);
     }
 
     @font-face {
